# pytessel

./: .buildinfo  .gitignore  Dockerfile  README.md  background.html  build_docker.sh  build_docker_linux_pypi.sh  community_guidelines.html  conda_build_config.yaml  environment.yml  examples.html  genindex.html  icosahedron_metaballs.ply  index.html  indices.npy  installation.html  meson.build  meta.yaml  normals.npy  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  testversion.py  user_interface.html  vertices.npy
.github/workflows/: build.yml  build_conda.yml  build_wheels.yml  docs.yml
_sources/: examples.rst.txt  index.rst.txt  installation.rst.txt
deploy/: README.md  check_version.py  docker_setup_github.sh  docker_setup_local.sh  docker_test_github.sh  docker_test_local.sh
docs/: background.rst  community_guidelines.rst  conf.py  index.rst  user_interface.rst
example/: build_metaballs_icosahedron.py  metaballs_scaling.py
examples/: .gitignore  build_metaballs_icosahedron_rectangular_grid.py  bunny.py  bunny_pointcloud.npz  gyroid.py  metaballs_icosahedron.py  metaballs_scaling.py
pytessel/: __init__.py  _version.py  edgetable.h  float_parser.h  isosurface.cpp  isosurface.h  isosurface_mesh.cpp  isosurface_mesh.h  pytessel.pxd  pytessel.pyx  pytessel_core.pxd  pytessel_core.pyx  scalar_field.cpp  scalar_field.h  triangletable.h  vec3.h
tests/: testIsosurface.py  test_isosurface.py  test_metaball_icosahedron.py  test_version.py
